--- a/index.html
+++ b/index.html
@@ -12,20 +12,19 @@
 </head>
 <body>
     <div class="container">
-        <header class="header">
-            <h3>Logo</h3>
+        <header class="header">            
+                    <img src="logo-clipart-moon-moon-thumbnail.png" alt="logo-ksiezyc" />
             <nav class="topnav">
              <ul class="menu">
                 <li><a href="#start">Start</a></li>
-                <li><a href="#o mnie">O mnie</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#omnie">O mnie</a></li>
+                <li><a href="#galeria">Galeria</a></li>
                 <li><a href="#oferta">Oferta</a></li>
                 <li><a href="#dlaczegoja">Dlaczego ja xD</a></li>
                 <li><a href="#kontakt">Kontakt</a></li>
               </ul>
             </nav>
         </header>
-
     <div class="box-model">
         <div class="row1">
             <div class="head">
@@ -80,7 +79,7 @@
         <div class="row5">
             <div class="thighs">
                 <div class="thighL">
-                    <div class="thighL1"><a href="#portfolio">Portfolio</a></div>
+                    <div class="thighL1"><a href="#galeria">Galeria</a></div>
                     <div class="thighL1"><a href="#oferta">Oferta</a></div>
                 </div>
                 <div class="thighR">
@@ -110,8 +109,63 @@
                 <div class="footR"></div>
             </div>
         </div>
-        </div>
     </div>
+    </div>
+
+    <section class="sections" id="start">
+        <div class="containers">
+            <h2>Start</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda recusandae reiciendis eius odio, voluptatem harum eveniet minus ipsa, nobis quaerat et debitis modi quo. Accusantium, pariatur ut excepturi. Natus, iure.</p>
+            <p>Optio tempore voluptas repellendus minima fugit quibusdam, rerum neque veritatis aliquid, ipsum modi doloremque aperiam nulla error sit vitae! Quibusdam excepturi repudiandae vitae reprehenderit rem sapiente odit impedit, quod facere!</p>
+            <p>Consequuntur eligendi repellendus doloribus harum laudantium corrupti, voluptatem porro libero provident possimus, fuga quas nostrum consectetur. Labore, et illum perspiciatis nihil laborum, deleniti, aut totam dolorum fugit iste sit necessitatibus?</p>
+            <p>Debitis pariatur cumque molestiae. Blanditiis eaque eveniet assumenda eum nemo ratione! Consectetur optio, sunt architecto ducimus velit. Accusamus possimus rerum sit ullam, alias dolores explicabo beatae impedit similique! Dolorum, velit?</p>
+        </div>
+    </section>
+    <section class="sections" id="omnie">
+        <div class="containers">
+            <h2>O mnie</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda recusandae reiciendis eius odio, voluptatem harum eveniet minus ipsa, nobis quaerat et debitis modi quo. Accusantium, pariatur ut excepturi. Natus, iure.</p>
+            <p>Optio tempore voluptas repellendus minima fugit quibusdam, rerum neque veritatis aliquid, ipsum modi doloremque aperiam nulla error sit vitae! Quibusdam excepturi repudiandae vitae reprehenderit rem sapiente odit impedit, quod facere!</p>
+            <p>Consequuntur eligendi repellendus doloribus harum laudantium corrupti, voluptatem porro libero provident possimus, fuga quas nostrum consectetur. Labore, et illum perspiciatis nihil laborum, deleniti, aut totam dolorum fugit iste sit necessitatibus?</p>
+            <p>Debitis pariatur cumque molestiae. Blanditiis eaque eveniet assumenda eum nemo ratione! Consectetur optio, sunt architecto ducimus velit. Accusamus possimus rerum sit ullam, alias dolores explicabo beatae impedit similique! Dolorum, velit?</p>
+        </div>
+    </section>
+    <section class="sections" id="galeria">
+    <div class="containers"></div>
+            <h2>Galeria</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda recusandae reiciendis eius odio, voluptatem harum eveniet minus ipsa, nobis quaerat et debitis modi quo. Accusantium, pariatur ut excepturi. Natus, iure.</p>
+            <p>Optio tempore voluptas repellendus minima fugit quibusdam, rerum neque veritatis aliquid, ipsum modi doloremque aperiam nulla error sit vitae! Quibusdam excepturi repudiandae vitae reprehenderit rem sapiente odit impedit, quod facere!</p>
+            <p>Consequuntur eligendi repellendus doloribus harum laudantium corrupti, voluptatem porro libero provident possimus, fuga quas nostrum consectetur. Labore, et illum perspiciatis nihil laborum, deleniti, aut totam dolorum fugit iste sit necessitatibus?</p>
+            <p>Debitis pariatur cumque molestiae. Blanditiis eaque eveniet assumenda eum nemo ratione! Consectetur optio, sunt architecto ducimus velit. Accusamus possimus rerum sit ullam, alias dolores explicabo beatae impedit similique! Dolorum, velit?</p>
+    </section>
+
+    <section class="sections" id="oferta">
+        <div class="containers">
+            <h2>Oferta</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda recusandae reiciendis eius odio, voluptatem harum eveniet minus ipsa, nobis quaerat et debitis modi quo. Accusantium, pariatur ut excepturi. Natus, iure.</p>
+            <p>Optio tempore voluptas repellendus minima fugit quibusdam, rerum neque veritatis aliquid, ipsum modi doloremque aperiam nulla error sit vitae! Quibusdam excepturi repudiandae vitae reprehenderit rem sapiente odit impedit, quod facere!</p>
+            <p>Consequuntur eligendi repellendus doloribus harum laudantium corrupti, voluptatem porro libero provident possimus, fuga quas nostrum consectetur. Labore, et illum perspiciatis nihil laborum, deleniti, aut totam dolorum fugit iste sit necessitatibus?</p>
+            <p>Debitis pariatur cumque molestiae. Blanditiis eaque eveniet assumenda eum nemo ratione! Consectetur optio, sunt architecto ducimus velit. Accusamus possimus rerum sit ullam, alias dolores explicabo beatae impedit similique! Dolorum, velit?</p>
+        </div>
+    </section>
+            <section class="sections" id="dlaczegoja">
+        <div class="containers">
+            <h2>Dlaczego ja</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda recusandae reiciendis eius odio, voluptatem harum eveniet minus ipsa, nobis quaerat et debitis modi quo. Accusantium, pariatur ut excepturi. Natus, iure.</p>
+            <p>Optio tempore voluptas repellendus minima fugit quibusdam, rerum neque veritatis aliquid, ipsum modi doloremque aperiam nulla error sit vitae! Quibusdam excepturi repudiandae vitae reprehenderit rem sapiente odit impedit, quod facere!</p>
+            <p>Consequuntur eligendi repellendus doloribus harum laudantium corrupti, voluptatem porro libero provident possimus, fuga quas nostrum consectetur. Labore, et illum perspiciatis nihil laborum, deleniti, aut totam dolorum fugit iste sit necessitatibus?</p>
+            <p>Debitis pariatur cumque molestiae. Blanditiis eaque eveniet assumenda eum nemo ratione! Consectetur optio, sunt architecto ducimus velit. Accusamus possimus rerum sit ullam, alias dolores explicabo beatae impedit similique! Dolorum, velit?</p>
+        </div>
+    </section>
+            <section class="sections" id="kontakt">
+        <div class="containers">
+            <h2>Kontakt</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda recusandae reiciendis eius odio, voluptatem harum eveniet minus ipsa, nobis quaerat et debitis modi quo. Accusantium, pariatur ut excepturi. Natus, iure.</p>
+            <p>Optio tempore voluptas repellendus minima fugit quibusdam, rerum neque veritatis aliquid, ipsum modi doloremque aperiam nulla error sit vitae! Quibusdam excepturi repudiandae vitae reprehenderit rem sapiente odit impedit, quod facere!</p>
+            <p>Consequuntur eligendi repellendus doloribus harum laudantium corrupti, voluptatem porro libero provident possimus, fuga quas nostrum consectetur. Labore, et illum perspiciatis nihil laborum, deleniti, aut totam dolorum fugit iste sit necessitatibus?</p>
+            <p>Debitis pariatur cumque molestiae. Blanditiis eaque eveniet assumenda eum nemo ratione! Consectetur optio, sunt architecto ducimus velit. Accusamus possimus rerum sit ullam, alias dolores explicabo beatae impedit similique! Dolorum, velit?</p>
+        </div>
+    </section>
 
     <footer class="footer"><h3>Created By Karol Jarczewski</h3></footer>
 </body>
