--- a/index.html
+++ b/index.html
@@ -131,13 +131,14 @@
         </div>
     </section>
     <section class="sections" id="galeria">
-        <div class="containers"></div>
+        <div class="containers">
             <h2>Galeria</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda recusandae reiciendis eius odio, voluptatem harum eveniet minus ipsa, nobis quaerat et debitis modi quo. Accusantium, pariatur ut excepturi. Natus, iure.</p>
             <p>Optio tempore voluptas repellendus minima fugit quibusdam, rerum neque veritatis aliquid, ipsum modi doloremque aperiam nulla error sit vitae! Quibusdam excepturi repudiandae vitae reprehenderit rem sapiente odit impedit, quod facere!</p>
             <p>Consequuntur eligendi repellendus doloribus harum laudantium corrupti, voluptatem porro libero provident possimus, fuga quas nostrum consectetur. Labore, et illum perspiciatis nihil laborum, deleniti, aut totam dolorum fugit iste sit necessitatibus?</p>
             <p>Debitis pariatur cumque molestiae. Blanditiis eaque eveniet assumenda eum nemo ratione! Consectetur optio, sunt architecto ducimus velit. Accusamus possimus rerum sit ullam, alias dolores explicabo beatae impedit similique! Dolorum, velit?</p>
-    </section>
+        </div>
+        </section>
 
     <section class="sections" id="oferta">
         <div class="containers">
