--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <meta property="og:title" content="Portfolio - Karol Jarczewski">
     <meta property="og:description" content="Frontendowe Portfolio">
-    <meta property="og:image" content="23-2148273840.jpg">
+    <meta property="og:image" content="549234-space-galaxy.jpg">
     <title>Portfolio</title>
 </head>
 <body>
