--- a/egzamin/Karol-Jarczewski.html
+++ b/egzamin/Karol-Jarczewski.html
@@ -65,7 +65,16 @@
         {
             display: flex;
             justify-content: space-evenly;
+            align-items: center;
+            min-height: 15vh;
+            background-color: yellow;
         }    
+
+        a > i
+        {
+            font-size: 1.5em;
+            min-height: 10vh;
+        }
     </style>
 </head>
 <body>
@@ -92,34 +101,36 @@
         </section>
         <section class="section" id="#oferta">
             <div class="container">
-                <h2>Galeria</h2>
+                <h2>Oferta</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda recusandae reiciendis eius odio, voluptatem harum eveniet minus ipsa, nobis quaerat et debitis modi quo. Accusantium, pariatur ut excepturi. Natus, iure.</p>
                 <p>Optio tempore voluptas repellendus minima fugit quibusdam, rerum neque veritatis aliquid, ipsum modi doloremque aperiam nulla error sit vitae! Quibusdam excepturi repudiandae vitae reprehenderit rem sapiente odit impedit, quod facere!</p>
                 <p>Consequuntur eligendi repellendus doloribus harum laudantium corrupti, voluptatem porro libero provident possimus, fuga quas nostrum consectetur. Labore, et illum perspiciatis nihil laborum, deleniti, aut totam dolorum fugit iste sit necessitatibus?</p>
                 <p>Debitis pariatur cumque molestiae. Blanditiis eaque eveniet assumenda eum nemo ratione! Consectetur optio, sunt architecto ducimus velit. Accusamus possimus rerum sit ullam, alias dolores explicabo beatae impedit similique! Dolorum, velit?</p>
             </div>
             </section>
+            <section class="section" id="#kontakt">
+                <div class="container">
+                    <h2>Kontakt</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda recusandae reiciendis eius odio, voluptatem harum eveniet minus ipsa, nobis quaerat et debitis modi quo. Accusantium, pariatur ut excepturi. Natus, iure.</p>
+                    <p>Optio tempore voluptas repellendus minima fugit quibusdam, rerum neque veritatis aliquid, ipsum modi doloremque aperiam nulla error sit vitae! Quibusdam excepturi repudiandae vitae reprehenderit rem sapiente odit impedit, quod facere!</p>
+                    <p>Consequuntur eligendi repellendus doloribus harum laudantium corrupti, voluptatem porro libero provident possimus, fuga quas nostrum consectetur. Labore, et illum perspiciatis nihil laborum, deleniti, aut totam dolorum fugit iste sit necessitatibus?</p>
+                    <p>Debitis pariatur cumque molestiae. Blanditiis eaque eveniet assumenda eum nemo ratione! Consectetur optio, sunt architecto ducimus velit. Accusamus possimus rerum sit ullam, alias dolores explicabo beatae impedit similique! Dolorum, velit?</p>
+                </div>
+                </section>
     </section>
     <footer class="footer">
-        <!-- <div class="flex"> -->
             <a href="#">
                 <i class="icon-user"></i>
-                <!-- <p>O nas</p> -->
             </a>
             <a href="#">
                 <i class="icon-info"></i>
-                <!-- <p>Info</p> -->
             </a>
             <a href="#">
                 <i class="icon-docs"></i>
-                <!-- <p>Dokumenty</p> -->
             </a>
             <a href="#">
                 <i class="icon-mail"></i>
-                <!-- <p>E-mail</p> -->
             </a>
-        <!-- </div> -->
-
     </footer>
     <container>
     
