--- a/egzamin/Karol-Jarczewski.html
+++ b/egzamin/Karol-Jarczewski.html
@@ -68,6 +68,7 @@
             align-items: center;
             min-height: 15vh;
             background-color: rgb(248, 248, 71);
+            transition: all 2s;
         }    
 
         .footer:hover
