dodanie marginu do nawigacji

--- a/Moje-Cwiczenia/figma/19.04.21/index.html
+++ b/Moje-Cwiczenia/figma/19.04.21/index.html
@@ -10,24 +10,32 @@
 <body>
     <div class="container">
         <header class="header">
-            <p>PRzkkladowy tekst numer jednen z fbryki kopirajtera xD</p>
-            <h1>To jesgt nagłówek tej strony</h1>
-            <p>Krótki tekst</p>
-            <aside class="bgc__aside">
-                <div class="bgc__aside--left"></div>
-                <div class="bgc__aside--right"></div>
-            </aside>
             <nav class="header__nav">
-                <ul class="nav-between">
+                <ul class="nav-left">
                     <li><a href="#mntn">MNTN</a></li>
-                    <li><a href="#account">Account</a></li>
                 </ul>
-                <ul class="nav-evenly">
+                <ul class="nav-3link">
                     <li><a href="#equipment">Equipment</a></li>                    
                     <li><a href="#aboutus">About us</a></li>
                     <li><a href="#blog">Blog</a></li>
                 </ul>
+                <ul class="nav-right">
+                    <li><a href="#account">Account</a></li>
+                </ul>
             </nav>
+            <div class="content-top">
+                <aside class="bgc__aside">
+                    <div class="bgc__aside--left"></div>
+             </aside>
+                <div>
+                 <p>PRzkkladowy tekst numer jednen z fbryki kopirajtera xD</p>
+                    <h1>To jesgt nagłówek tej strony</h1>
+                    <p>Krótki tekst</p>
+                </div>
+                    <aside class="bgc__aside">
+                    <div class="bgc__aside--right"></div>
+                </aside>
+            </div>
         </header>
         <main class="content">
              <div class="content__before">
