--- a/Moje-Cwiczenia/figma/19.04.21/index.html
+++ b/Moje-Cwiczenia/figma/19.04.21/index.html
@@ -30,10 +30,11 @@
                 <aside class="bgc__aside">
                     <div class="bgc__aside--left"></div>
                 </aside>
-                <div>
-                 <p>PRzkkladowy tekst numer jednen z fbryki kopirajtera xD</p>
-                    <h1>To jesgt nagłówek tej strony</h1>
-                    <p>Krótki tekst</p>
+                <div class="hero">
+                 <div class="subtitle"><span></span> A HIKING GUIDE</div>
+                    <h1>Be Prepared For The</h1>
+                    <h1>Mountains And Beyond!</h1><br>
+                    <p>scroll down <span>↓</span></p>
                 </div>
                 <aside class="bgc__aside">
                      <div class="bgc__aside--right"></div>
