poprawka klasy na .hero > p

--- a/Moje-Cwiczenia/figma/19.04.21/index.html
+++ b/Moje-Cwiczenia/figma/19.04.21/index.html
@@ -47,7 +47,8 @@
                          <p>02</p>
                          <p>03</p>
                      </div>
-                     <div class="border"><p></p></div>
+                     <div class="border"><div class="border2"></div></div>
+
                 </aside>
             </div>
         </header>
