bgc__aside--right marginy

--- a/Moje-Cwiczenia/figma/19.04.21/index.html
+++ b/Moje-Cwiczenia/figma/19.04.21/index.html
@@ -47,8 +47,7 @@
                          <p>02</p>
                          <p>03</p>
                      </div>
-                     <div class="border"><div class="border2"></div></div>
-
+                     <div class="border"></div>
                 </aside>
             </div>
         </header>
