sekcje, content oraz tło

--- a/Moje-Cwiczenia/figma/19.04.21/index.html
+++ b/Moje-Cwiczenia/figma/19.04.21/index.html
@@ -35,7 +35,7 @@
                     </div>
                 </aside>
                 <div class="hero">
-                 <div class="subtitle"><span></span> A HIKING GUIDE</div>
+                 <div class="subtitle"><p class="border-width"></p> A HIKING GUIDE</div>
                     <h1>Be Prepared For The</h1>
                     <h1>Mountains And Beyond!</h1><br>
                     <p>scroll down <span>↓</span></p>
@@ -52,33 +52,32 @@
             </div>
         </header>
         <main class="content">
-             <div class="content__before">
-                 <div class="content__before--colL"></div>
-                 <div class="content__before--colR">
-                     <div class="content__before__colR--row1"><p>esnretsrntrptrnt4rnt4n4t</p></div>
-                     <div class="content__before__colR--row2"><h1>enrytprnytplrnytlprnpnrpl</h1></div>
-                     <div class="content__before__colR--row3"><p>ernoezn rtetrnt eysrne tysrne ytsrney tsrnt ysrne tysrne trn</p></div>
-                     <div class="content__before__colR--row4"><p>retysrnytern;ytrsn;yternyt;e</p></div>
+             <div class="content__section">
+                 <div class="content__colL">
+                    <div class="content--row1"><p class="border-width"> GET STARTED</p></div>
+                    <div class="content--row2"><h2>What level of hiker are you?</h2></div>
+                    <div class="content--row3"><p>ernoezn rtetrnt eysrne tysrne ytsrney tsrnt ysrne tysrne trn</p></div>
+                    <div class="content--row4"><p>read more →</p></div>
+                 </div>
+                 <div class="content__colR"><img src="01.webp" alt="spacer"/></div>
+             </div>
+             <div class="content__section">
+                 <div class="content__colL"><img src="02.webp" alt="szczyt-góry"/></div>
+                 <div class="content__colR">
+                     <div class="content--row1"><p class="border-width"> HIKING ESSENTIALS</p></div>
+                     <div class="content--row2"><h2>Picking the right Hiking Gear!</h2></div>
+                     <div class="content--row3"><p>ernoezn rtetrnt eysrne tysrne ytsrney tsrnt ysrne tysrne trn</p></div>
+                     <div class="content--row4"><p>retysrnytern;ytrsn;yternyt;e</p></div>
                  </div>
              </div>
-             <div class="content__middle">
-                 <div class="content__middle--colL"></div>
-                 <div class="content__middle--colR">
-                     <div class="content__middle__colR--row1"><p>esnretsrntrptrnt4rnt4n4t</p></div>
-                     <div class="content__middle__colR--row2"><h1>enrytprnytplrnytlprnpnrpl</h1></div>
-                     <div class="content__middle__colR--row3"><p>ernoezn rtetrnt eysrne tysrne ytsrney tsrnt ysrne tysrne trn</p></div>
-                     <div class="content__middle__colR--row4"><p>retysrnytern;ytrsn;yternyt;e</p></div>
+             <div class="content__section">
+                 <div class="content__colL">
+                    <div class="content--row1"><p class="border-width"> WHERE YOU GO IS KEY</p></div>
+                    <div class="content--row2"><h2>Understand Your Map & Timing</h2></div>
+                    <div class="content--row3"><p>ernoezn rtetrnt eysrne tysrne ytsrney tsrnt ysrne tysrne trn</p></div>
+                    <div class="content--row4"><p>retysrnytern;ytrsn;yternyt;e</p></div>
                  </div>
-             </div>
-             </div>
-             <div class="content__after">
-                 <div class="content__after--colL"></div>
-                 <div class="content__after--colR">
-                     <div class="content__after__colR--row1"><p>esnretsrntrptrnt4rnt4n4t</p></div>
-                     <div class="content__after__colR--row2"><h1>enrytprnytplrnytlprnpnrpl</h1></div>
-                     <div class="content__after__colR--row3"><p>ernoezn rtetrnt eysrne tysrne ytsrney tsrnt ysrne tysrne trn</p></div>
-                     <div class="content--after__colR--row4"><p>retysrnytern;ytrsn;yternyt;e</p></div>
-                 </div>
+                 <div class="content__colR"><img src="03.webp" alt="kompas-na-szczycie"/></div>
              </div>
              </div>
         </main>
