--- a/Moje-Cwiczenia/figma/19.04.21/index.html
+++ b/Moje-Cwiczenia/figma/19.04.21/index.html
@@ -47,16 +47,17 @@
                          <p>02</p>
                          <p>03</p>
                      </div>
-                     <div class="border"></div>
+                     <div class="border-column">
+                     <div class="border--long"></div><div class="border--short"></div></div>
                 </aside>
             </div>
         </header>
         <main class="content">
              <div class="content__section">
                  <div class="content__colL">
-                    <div class="content--row1"><p class="border-width"> GET STARTED</p></div>
-                    <div class="content--row2"><h2>What level of hiker are you?</h2></div>
-                    <div class="content--row3"><p>ernoezn rtetrnt eysrne tysrne ytsrney tsrnt ysrne tysrne trn</p></div>
+                    <div class="content--row1"><p class="border-width">GET STARTED</p></div>
+                    <div class="content--row2"><h1>What level of hiker are you?</h1></div>
+                    <div class="content--row3"><p>Determining what level of hiker you are can be an important tool when planning future hikes. This hiking level guide will help you plan hikes according to different hike ratings set by various websites like All Trails and Modern Hiker. What type of hiker are you – novice, moderate, advanced moderate, expert, or expert backpacker? </p></div>
                     <div class="content--row4"><p>read more →</p></div>
                  </div>
                  <div class="content__colR"><img src="01.webp" alt="spacer"/></div>
@@ -64,18 +65,19 @@
              <div class="content__section">
                  <div class="content__colL"><img src="02.webp" alt="szczyt-góry"/></div>
                  <div class="content__colR">
-                     <div class="content--row1"><p class="border-width"> HIKING ESSENTIALS</p></div>
-                     <div class="content--row2"><h2>Picking the right Hiking Gear!</h2></div>
-                     <div class="content--row3"><p>ernoezn rtetrnt eysrne tysrne ytsrney tsrnt ysrne tysrne trn</p></div>
-                     <div class="content--row4"><p>retysrnytern;ytrsn;yternyt;e</p></div>
+                     <div class="content--row1"><p class="border-width">HIKING ESSENTIALS</p></div>
+                     <div class="content--row2"><h1>Picking the right Hiking Gear!</h1></div>
+                     <div class="content--row3"><p>The nice thing about beginning hiking is that you don’t really need any special gear, you can probably get away with things you already have.
+                        Let’s start with clothing. A typical mistake hiking beginners make is wearing jeans and regular clothes, which will get heavy and chafe wif they get sweaty or wet.</p></div>
+                     <div class="content--row4"><p>read more →</p></div>
                  </div>
              </div>
              <div class="content__section">
                  <div class="content__colL">
                     <div class="content--row1"><p class="border-width"> WHERE YOU GO IS KEY</p></div>
-                    <div class="content--row2"><h2>Understand Your Map & Timing</h2></div>
-                    <div class="content--row3"><p>ernoezn rtetrnt eysrne tysrne ytsrney tsrnt ysrne tysrne trn</p></div>
-                    <div class="content--row4"><p>retysrnytern;ytrsn;yternyt;e</p></div>
+                    <div class="content--row2"><h1>Understand Your Map & Timing</h1></div>
+                    <div class="content--row3"><p>To start, print out the hiking guide and map. If it’s raining, throw them in a Zip-Lock bag. Read over the guide, study the map, and have a good idea of what to expect. I like to know what my next landmark is as I hike. For example, I’ll read the guide and know that say, in a mile, I make a right turn at the junction..</p></div>
+                    <div class="content--row4"><p>read more →</p></div>
                  </div>
                  <div class="content__colR"><img src="03.webp" alt="kompas-na-szczycie"/></div>
              </div>
@@ -88,9 +90,9 @@
                 <p> Copyright 2021 MNTN, Inc. Terms & Privacy</p>
             </div>
             <div class="footer__Right">
-                <nav class="footer__Right--navRight">
-                    <h3>More on The Blog</h3>
+                <nav class="footer__Right--nav">
                     <ul>
+                        <h3>More on The Blog</h3>
                         <li><a href="#aboutMNTN">About MNTN</a></li>
                         <li><a href="#contributors">Contributors & Writers</a></li>
                         <li><a href="#write">Write For Us</a></li>
