--- a/Moje-Cwiczenia/figma/19.04.21/index.html
+++ b/Moje-Cwiczenia/figma/19.04.21/index.html
@@ -86,7 +86,7 @@
         <footer class="footer">
             <div class="footer__Left">
                 <h3>MNTN</h3>
-                <P>rzoer e reosnroz ernzoerszon rzoerszon rezosn  ernzoe e rnzoe szor</P>
+                <P>Get out there & discover your next slope, mountain & destination!</P>
                 <p> Copyright 2021 MNTN, Inc. Terms & Privacy</p>
             </div>
             <div class="footer__Right">
