--- a/Moje-Cwiczenia/figma/19.04.21/index.html
+++ b/Moje-Cwiczenia/figma/19.04.21/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <header class="header">
             <nav class="header__nav">
-                <ul class="nav-left">
-                    <li><a href="#mntn">MNTN</a></li>
+                <ul class="logo-left">
+                    <li><a href="#mntn-logo">MNTN</a></li>
                 </ul>
                 <ul class="nav-3link">
                     <li><a href="#equipment">Equipment</a></li>                    
@@ -38,7 +38,7 @@
                  <div class="subtitle"><p class="border-width"></p> A HIKING GUIDE</div>
                     <h1>Be Prepared For The</h1>
                     <h1>Mountains And Beyond!</h1><br>
-                    <p>scroll down <span>↓</span></p>
+                    <a href="#content">scroll down <span>↓</span></a>
                 </div>
                 <aside class="bgc__aside">
                      <div class="bgc__aside--right">
@@ -52,7 +52,7 @@
                 </aside>
             </div>
         </header>
-        <main class="content">
+        <main class="content" id="content">
              <div class="content__section">
                  <div class="content__colL">
                     <div class="content--row1"><p class="border-width"></p>GET STARTED</div>
@@ -62,22 +62,22 @@
                  </div>
                  <div class="content__colR"><img src="01.webp" alt="spacer"/></div>
              </div>
-             <div class="content__section">
+             <div class="content__section" id="read-more">
                  <div class="content__colL"><img src="02.webp" alt="szczyt-góry"/></div>
                  <div class="content__colR">
                      <div class="content--row1"><p class="border-width"></p>HIKING ESSENTIALS</div>
                      <div class="content--row2"><h1>Picking the right Hiking Gear!</h1></div>
                      <div class="content--row3"><p>The nice thing about beginning hiking is that you don’t really need any special gear, you can probably get away with things you already have.
                         Let’s start with clothing. A typical mistake hiking beginners make is wearing jeans and regular clothes, which will get heavy and chafe wif they get sweaty or wet.</p></div>
-                     <div class="content--row4"><a href="#read-more">read more →</a></div>
+                     <div class="content--row4"><a href="#read-more2">read more →</a></div>
                  </div>
              </div>
-             <div class="content__section">
+             <div class="content__section" id="read-more2">
                  <div class="content__colL">
                     <div class="content--row1"><p class="border-width"></p>WHERE YOU GO IS KEY</div>
                     <div class="content--row2"><h1>Understand Your Map & Timing</h1></div>
                     <div class="content--row3"><p>To start, print out the hiking guide and map. If it’s raining, throw them in a Zip-Lock bag. Read over the guide, study the map, and have a good idea of what to expect. I like to know what my next landmark is as I hike. For example, I’ll read the guide and know that say, in a mile, I make a right turn at the junction..</p></div>
-                    <div class="content--row4"><a href="#read-more">read more →</a></div>
+                    <div class="content--row4"><a href="#content">read more →</a></div>
                  </div>
                  <div class="content__colR"><img src="03.webp" alt="kompas-na-szczycie"/></div>
              </div>
