media dla 768px

--- a/Moje-Cwiczenia/javascript/scroll-bar — kopia.html
+++ b/Moje-Cwiczenia/javascript/scroll-bar — kopia.html
@@ -28,7 +28,7 @@
 <body>
     <div class="status"></div>
     <script>
-        //window.scrollY - własciwosc informuje, nas w którym miescu jesteśmy przewijając naszą stronę.
+        //window.scrollY - własciwosc informuje, nas w którym miescu jesteśmy przwijając naszą stronę.
         //document.documentElement.offsetHeight - wysokość naszej całej strony
         //window.innerHeight - wysokość okna przeglądarki
         const bar = document.querySelector(".status");
