reverse na 599px

--- a/Moje-Cwiczenia/figma/19.04.21/index.html
+++ b/Moje-Cwiczenia/figma/19.04.21/index.html
@@ -63,8 +63,8 @@
                  <div class="content__colR"><img src="01.webp" alt="spacer"/></div>
              </div>
              <div class="content__section" id="read-more">
-                 <div class="content__colL"><img src="02.webp" alt="szczyt-góry"/></div>
-                 <div class="content__colR">
+                 <div class="content__colL content__colL--reverse"><img src="02.webp" alt="szczyt-góry"/></div>
+                 <div class="content__colR content__colR--reverse">
                      <div class="content__row1"><p class="border-width"></p>HIKING ESSENTIALS</div>
                      <div class="content__row2"><h1>Picking the right Hiking Gear!</h1></div>
                      <div class="content__row3"><p>The nice thing about beginning hiking is that you don’t really need any special gear, you can probably get away with things you already have.
