--- a/Moje-Cwiczenia/figma/19.04.21/index.html
+++ b/Moje-Cwiczenia/figma/19.04.21/index.html
@@ -55,7 +55,7 @@
         <main class="content" id="content">
              <div class="content__section">
                  <div class="content__colL">
-                    <div class="content__row1 sub-title"><p class="border-width"></p>GET STARTED</div>
+                    <div class="content__row1"><p class="border-width"></p>GET STARTED</div>
                     <div class="content__row2"><h1>What level of hiker are you?</h1></div>
                     <div class="content__row3"><p>Determining what level of hiker you are can be an important tool when planning future hikes. This hiking level guide will help you plan hikes according to different hike ratings set by various websites like All Trails and Modern Hiker. What type of hiker are you – novice, moderate, advanced moderate, expert, or expert backpacker? </p></div>
                     <div class="content__row4"><a href="#read-more">read more  →</a></div>
@@ -91,7 +91,7 @@
             </div>
             <div class="footer-right">
                 <nav class="footer-nav">
-                    <ul class="footer-nav__container klasa-modyfikujaca">
+                    <ul class="footer-nav__container">
                         <h3 class="footer-nav__title">More on The Blog</h3>
                         <li class="footer-nav__item"><a href="#aboutMNTN" class="footer-nav__link" >About MNTN</a></li>
                         <li><a href="#contributors">Contributors & Writers</a></li>
